--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
+
+
+config/settings.yml
+config/database.yml
+public/assets/
+dump.rdb
+.DS_Store
