--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,3 +1,3 @@
-<% hostname = ENV['APP_HOST'] || 'forum.com' %>
+<% hostname = ENV['APP_HOST'] || 'forum.getdecred.org' %>
 hostname: <%= hostname.inspect %>
 email_sender: <%= (ENV['SMTP_USER'] || "no-reply@#{hostname}").inspect %>
